--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,43 @@
       content="Web site created using create-react-app"
     />
     <title>React App</title>
+    <style>
+      @font-face {
+        font-family: 'Plus Jakarta Display';
+        src: url('%PUBLIC_URL%/fonts/plusjakartadisplay-bold-webfont.woff2') format('woff2'),
+            url('%PUBLIC_URL%/fonts/plusjakartadisplay-bold-webfont.woff') format('woff');
+        font-weight: 700;
+        font-style: normal;
+        font-display: fallback
+      }
+
+      @font-face {
+        font-family: 'Plus Jakarta Display';
+        src: url('%PUBLIC_URL%/fonts/plusjakartadisplay-medium-webfont.woff2') format('woff2'),
+            url('%PUBLIC_URL%/fonts/plusjakartadisplay-medium-webfont.woff') format('woff');
+        font-weight: 500;
+        font-style: normal;
+        font-display: fallback
+      }
+
+      @font-face {
+        font-family: 'Plus Jakarta Text';
+        src: url('%PUBLIC_URL%/fonts/plusjakartatext-bold-webfont.woff2') format('woff2'),
+            url('%PUBLIC_URL%/fonts/plusjakartatext-bold-webfont.woff') format('woff');
+        font-weight: 700;
+        font-style: normal;
+        font-display: fallback
+      }
+
+      @font-face {
+        font-family: 'Plus Jakarta Text';
+        src: url('%PUBLIC_URL%/fonts/plusjakartatext-regular-webfont.woff2') format('woff2'),
+            url('%PUBLIC_URL%/fonts/plusjakartatext-regular-webfont.woff') format('woff');
+        font-weight: 400;
+        font-style: normal;
+        font-display: fallback
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
